# noOS

./: CMakeLists.txt  README.md
arch/x86/: gdt.cpp  idt.cpp  isrc.cpp  isrq.cpp  timer.cpp
arch/x86/asm/: irq.asm  isr.asm  kernel.asm
include/common/: memory.h  string.h  type.h
include/kernel/: screen.h  system.h
kernel/: kmain.cpp
